<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/root"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:background="#f9f9f9"
                                                   android:background="#f9f9f9">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_input"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:errorEnabled="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_height="wrap_content" android:layout_width="328dp"
            app:layout_constraintHorizontal_bias="0.502" android:layout_marginTop="38dp"
            app:layout_constraintTop_toBottomOf="@+id/cover">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_input_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_hint"
                android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input"
            android:layout_marginTop="28dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_input"
            app:passwordToggleTint="@color/color_input_hint"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true" app:layout_constraintHorizontal_bias="0.493"
            android:layout_height="wrap_content"
            android:layout_width="328dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            app:ccp_textSize="20dp"
            app:ccp_defaultNameCode="SG"
            app:ccp_showNameCode="false"
            app:ccp_showPhoneCode="false"
            app:ccp_showFullName="true"
            app:ccpDialog_showPhoneCode="false"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/password_input" app:layout_constraintStart_toEndOf="@+id/country"
            android:layout_marginStart="12dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="49dp" app:layout_constraintHorizontal_bias="1.0"/>


    <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/log_in_label"
            android:textAllCaps="true"
            android:textColor="@color/color_label"
            android:textSize="22dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.488" android:layout_marginBottom="16dp"
            android:layout_marginTop="120dp" app:layout_constraintTop_toBottomOf="@+id/password_input"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="220dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/cover"
            android:id="@+id/cover"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
    />
    <TextView
            android:text="Country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:id="@+id/country" app:layout_constraintStart_toStartOf="@+id/password_input"
            app:layout_constraintTop_toBottomOf="@+id/password_input" android:layout_marginTop="36dp"/>
    <TextView
            android:text="@string/login_error"
            android:textColor="@color/color_error_hint"
            android:textSize="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:id="@+id/countryErrHint" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/country" app:layout_constraintStart_toStartOf="@+id/country"
    />

</androidx.constraintlayout.widget.ConstraintLayout>